# fastapi-retriebot-api-server

./: .env_example  README.md  config.py  main.py  pyproject.toml  setup.py  websocket_test.py
api/: default.py  router.py
prompts/: default_template.yaml  router_template.yaml
